--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -18,9 +18,9 @@
   <h3 class="pull-left">Our heros' epic battle with error margins</h4><br><br><br><br>
       <ul>
         <li><h4 class="text-info">Playing with the algorithm's parameters</h4>
-          <ul><li>The parameters that may be adjusted in a random forests algorithm include the max-depth of our trees, the number of trees we used, amount of features to use and the size of the subset of features each tree can choose from. We adjusted these parameters to try and find an optimal configuration for our problem.</ul></li>
-        <li><h4 class="text-info">Create features</h4>
-          <ul><li>We added additional input features to feed to our learning algorithm that we thought would decrease the generalization error observed once the algorithm was trained. Measuring generalization error for each of the different outputs we produce gave us an idea of what we could improve on. Sometimes adding features that seemed like they would help actually ended up increasing our generalization error. We hypothesize that this was the case because the new features may have been increasing our model's bias towards those features of the data.</ul></li>
+          <ul><li>The parameters that may be adjusted in a random forests algorithm include the max-depth of our trees, the number of trees we used, amount of features to use and the size of the subset of features each tree can choose from. Our heros adjusted these parameters to try and find an optimal algorithm configuration for our problem.</ul></li>
+        <li><h4 class="text-info">Adding to our feature arsenal</h4>
+          <ul><li>Our heros added additional input features to feed to their learning algorithm that they thought would decrease the generalization error observed once the algorithm was trained. Measuring generalization error for each of the different outputs they produced gave them an idea of what they could improve on. Sometimes adding features that seemed like they would help actually ended up increasing their generalization error. Our heros hypothesize that this was the case because the new features may have been increasing our model's bias towards those features of the data.</ul></li>
         </li></li>
 </div>
 
