updated Kwyn's linked in URL

--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -83,7 +83,7 @@
         <ul class="list-inline text-center">
           <li><a href="https://github.com/HarleyKwyn"><i class="fa fa-github fa-3x"></i></a></li>
           <li></li>
-          <li><a href="https://www.linkedin.com/pub/kwyn-meagher/1a/a70/46b/"><i class="fa fa-linkedin fa-3x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/harleykwyn/"><i class="fa fa-linkedin fa-3x"></i></a></li>
           <li></li>
           <li><a href="https://twitter.com/harleykwyn"><i class="fa fa-twitter fa-3x"></i></a></li>
         </ul>
