--- a/public/views/partials/dataExplaination.html
+++ b/public/views/partials/dataExplaination.html
@@ -3,8 +3,8 @@
     <h2>Chapter 1: Discovering our Data</h2>
   </div>
 <div class="row">
-  <h3 class="pull-right">As our hero's gathered, looking forward to their upcoming quest, they received a package from <a href="http://www.galaxyzoo.org/#/">Galaxy Zoo HQ</a>.
-    Our package included a set of <a href="https://en.wikipedia.org/wiki/Training_set">training data</a> and a set of <a href="https://en.wikipedia.org/wiki/Test_set">test data</a></h4><br><br><br>
+  <h3>As our heroes gathered, looking forward to their upcoming quest, they received a package from <a href="http://www.galaxyzoo.org/#/">Galaxy Zoo HQ</a>.
+    Our package included a set of <a href="https://en.wikipedia.org/wiki/Training_set">training data</a> and a set of <a href="https://en.wikipedia.org/wiki/Test_set">test data</a></h3><br>
       <ul>
         <li><h4 class="text-info">Understanding your Inputs</h4>
           <ul><li>The training data we plan to train our ship's navagation system on included thousands of input vectors along with answer vectors to accompany them. Working to get a sense of these pictures, we examined their dimensions (424x424), noticed the galaxies were consistently centered, and saw that these pictures were in color</ul></li>
@@ -21,7 +21,7 @@
 
 <hr class="featurette-divider">
 <div class="row">
-  <h3 class="pull-right">Our Learnings and Discovered Best Practices</h3><br><br><br>
+  <h3 class="pull-right">Lessons Learned and Discovered Best Practices</h3><br><br><br>
       <ul>
         <li><h4 class="text-info">Understanding your Inputs</h4>
           <ul><li>Turning a sharp eye towards your input data (the test and training set) will be valuable in researching the best ways to approach your project. Expect a strong understanding of your input dataset to give you a few hypotheses on how to <a href=" https://en.wikipedia.org/wiki/Feature_extraction">feature extract</a> based on your specific input type. 
