--- a/public/views/partials/iterationAndTesting.html
+++ b/public/views/partials/iterationAndTesting.html
@@ -4,23 +4,23 @@
   </div>
 <div class="row">
 
-  <h3 class="pull-right">Our heros set out taking their first pass at training a machine learning algorithm</h4><br><br><br><br>
+  <h3>Our heroes set out taking their first pass at training a machine learning algorithm</h4><br>
       <ul>
         <li><h4 class="text-info">Iteration Based Implementation</h4>
-          <ul><li>Our heros decided on an iterative (build and fix) model for implementing their first machine learning algorithm. With this model, our heroes hoped to take advantage of quickly gaining a high level view of our project, and gaining more insight on priorities. They were guided by a <a href="http://www.kaggle.com/c/galaxy-zoo-the-galaxy-challenge/forums/t/6803/beating-the-benchmark">forum posting</a> </ul></li></li> and set off in their journey.
+          <ul><li>Our heroes decided on an iterative (build and fix) model for implementing their first machine learning algorithm. With this model, our heroes hoped to take advantage of quickly gaining a high level view of our project, and gaining more insight on priorities. They were guided by a <a href="http://www.kaggle.com/c/galaxy-zoo-the-galaxy-challenge/forums/t/6803/beating-the-benchmark">forum posting</a> </ul></li></li> and set off in their journey.
         <li><h4 class="text-info">First Features</h4>
-          <ul><li>Our heros looked towards our first features to be a broad and wholistic set of data. They cropped the image, and grayscaled the image, using the final output as an initial set of features. This minimal level of complexity allowed for the fewest complications when we had to pass our data to our machine.</ul></li>
+          <ul><li>Our heroes looked towards our first features to be a broad and wholistic set of data. They cropped the image, and grayscaled the image, using the final output as an initial set of features. This minimal level of complexity allowed for the fewest complications when we had to pass our data to our machine.</ul></li>
         </li></li>
         <li><h4 class="text-info">Using Your Data With Your Machine</h4>
-          <ul><li>While our heros were working with images, our machine would not be able to work with raw image data. As a result, our heros seeked <a href="http://effbot.org/imagingbook/pil-index.htm">additional tools</a> to convert our images into a readable format. We saved our new inputs into <a href="https://en.wikipedia.org/wiki/Comma-separated_values">CSV files</a>, making sure our headers and labels were properly aligned. We were off to train our machine.</li></ul></li>
+          <ul><li>While our heroes were working with images, our machine would not be able to work with raw image data. As a result, our heroes seeked <a href="http://effbot.org/imagingbook/pil-index.htm">additional tools</a> to convert our images into a readable format. We saved our new inputs into <a href="https://en.wikipedia.org/wiki/Comma-separated_values">CSV files</a>, making sure our headers and labels were properly aligned. We were off to train our machine.</li></ul></li>
         <li><h4 class="text-info">Inperpreting Your Output</h4>
-          <ul><li>A set of training images and answers had been set aside for testing from the beginning. After our machine had been trained, we were able to run predictions, and test our machine's accuracy based on real data. We discovered that, despite our simple sample size, we were still 84% accurate. From here, our heros were able to predict different aspects of our solution in order to get more granular data for testing.</ul></li></li>
+          <ul><li>A set of training images and answers had been set aside for testing from the beginning. After our machine had been trained, we were able to run predictions, and test our machine's accuracy based on real data. We discovered that, despite our simple sample size, we were still 84% accurate. From here, our heroes were able to predict different aspects of our solution in order to get more granular data for testing.</ul></li></li>
 </div>
 
 <hr class="featurette-divider">
 <div class="row">
 
-  <h3 class="pull-right">Our Learnings and Discovered Best Practices</h4><br><br><br><br>
+  <h3 class="pull-right">Lessons Learned and Discovered Best Practices</h4><br><br><br><br>
       <ul>
         <li><h4 class="text-info">Machine Learning Implementation</h4>
           <ul><li>There are <a href="http://see.stanford.edu/materials/aimlcs229/ML-advice.pdf">two theories</a> behind implementing machine learning algorithms. The first theory requires careful planning, and can produce a more scalable and elegant algorithm. The dangers of this approach is that it can lead to misprioritization of work given the task ahead is still relatively hazy. Our strategy was a 'build-and-fix" strategy. In this implementation, the goal is to quickly implement an algorithm, and use extensive testing to determine focal areas. The advantage of this approach is that more time is spent on relevant tasks.</ul></li></li>
