--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -10,7 +10,7 @@ svg {
  <div class = "content">
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="featurette-image img-responsive" src="../../images/MLWordCluster.png" style="width: 500px; height: 500px;">
+      <img class="featurette-image img-responsive" src="../../images/MLWordCluster.png">
     </div>
     <div class="col-md-7">
       <h2 class="featurette-heading">Machine Learning <span class="text-muted">A Definition</span></h2>
@@ -82,7 +82,7 @@ svg {
         </p>
         <p class="lead">
           We represent this hypothesis as a linear function in this example:<br>
-          <img class="featurette-image img-responsive" src="../../images/hypothesisfunction.png">
+          <img class="hypothesis" src="../../images/hypothesisfunction.png">
         </p>
       </div>
       <div class="col-md-5">
@@ -98,7 +98,7 @@ svg {
 
     <div class="row featurette">
       <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive" src="../../images/costfunction.png" alt="Generic placeholder image">
         <!-- <div class='costfunction'> -->
         <!-- </div> -->
       </div>
@@ -106,9 +106,6 @@ svg {
         <h2 class="featurette-heading">Cost Function <span class="text-muted">Finding the Right Parameters</span></h2>
       </div>
         <p class="lead">The cost function helps figure out how to fit the best possible straight line to our data by minimizing the parameters &theta;<sub align='right'>0</sub> and &theta;<sub algin='right'>1</sub> so that the hypothesis h<sub>&theta;</sub>(x) is as close as possible to the known output (y) for each observed input (from 1 to m) in the training data.
-        </p>
-        <p class="lead">The cost function (also known as the squared error function) looks like the following:<br>
-          <img class="featurette-image img-responsive" src="../../images/costfunction.png">
         </p>
     </div>
 
