--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -2,8 +2,8 @@
   <div>
   <div class="chapterTitle">
     <h2>Chapter 2: Researching our Path</h2>
-    <h3>Forging a path through space requires knowedge of the environment</h3>
   </div>
+    <h3>Forging a path through space requires knowedge of the environment</h3><br>
       <div class="chapter">
       <ul>
         <li><h4 class="text-info">Find out what other people have done already</h4>
@@ -18,7 +18,7 @@
     </div>
   <hr class="featurette-divider">
   <div class="row">
-  <h3 class="pull-right">Our Learnings and Discovered Best Practices</h3><br><br><br>
+  <h3 class="pull-right">Lessons Learned and Discovered Best Practices</h3><br><br><br>
     </div>
     <div class="chapter">
       <ul>
