--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
         <h3 class="text-info">Jeanette Pettibone</h3>
-        <h4 class="text-muted"> Linguist with experience in Natural Language Processing. Expert in rapid prototyping of machine learning algorithms</h4>
+        <h4> Linguist with experience in Natural Language Processing. Expert in rapid prototyping of machine learning algorithms</h4>
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Vinnie Giarrusso</h3>
-          <h4 class="text-muted"> Musician and teacher in his life before code.  When not spending his spare time hacking with three.js, you can find him out hiking and exploring.</h4>
+          <h4> Musician and teacher in his life before code.  When not spending his spare time hacking with three.js, you can find him out hiking and exploring.</h4>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Charles Hughes</h3>
-          <h4 class="text-muted"> Science and technology nerd. Music geek. Renaissance hacker.</h4>
+          <h4> Science and technology nerd. Music geek. Renaissance hacker.</h4>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Kwyn Alice Meagher</h3>
-          <h4 class="text-muted"> Full-stack engineer. Programing polyglot. Machine learning, and parallel computing enthusiast. </h4>
+          <h4> Full-stack engineer. Programing polyglot. Machine learning, and parallel computing enthusiast. </h4>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Scott Zhang</h3>
-          <h4 class="text-muted"> Web developer and former management consultant. Loves Javascript, and en route to becoming Random Forest Guru. </h4>
+          <h4> Web developer and former management consultant. Loves Javascript, and en route to becoming Random Forest Guru. </h4>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Sonali Dayal</h3>
-          <h4 class="text-muted"> Biochemist now hacker. Expert feature extractor for machine learning.</h4>
+          <h4> Biochemist now hacker. Expert feature extractor for machine learning.</h4>
         </div>
       </div>
     </div>
