--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,9 +1,9 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/*  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;*/
   background-image: url('../images/HUDF_s.jpg');
 }
 
 a {
-  color: #00B7FF;
+  /*color: #00B7FF;*/
 }
