--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -33,9 +33,9 @@
         </div>
         <div class="col-md-7">
           <div class="row">
-            <div class="panel panel-default" style="background-color : #02022A;">
+            <div class="panel panel-default">
               <!-- Default panel contents -->
-              <div class="panel-heading " style="background-color : #101010; text-shadow: 3px 3px 3px #333333;"><h2 class="text-info text-center" style="color: #FFFFFF">Galaxy Morphology Classification</h2></div>
+              <div class="panel-heading " style="text-shadow: 3px 3px 3px #333333;"><h2 class="text-info text-center" style="color: #FFFFFF">Galaxy Morphology Classification</h2></div>
 
               <!-- Table -->
               <table class="table text-center" style="color: #FFFFFF;">
