--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
-    <link href="../styles/index.css" rel="stylesheet">
+    <link rel='stylesheet' href="../styles/index.css">
     <link rel="stylesheet" type="text/css" href="../bower_components/c3/c3.css">
     <link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 
