adding new text

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -8,6 +8,21 @@ svg {
 
 <div class="container mlintro" ng-controller='MLIntroController'>
  <div class = "content">
+  <div class="chapterTitle">
+    <h2>Introduction: An Adventure in Classifying Galaxies and A Guide to Implementing Your First Machine Learning Algorithm</h2>
+  </div>
+<div class="row featurette">
+  <div class="col-md-5">
+    <div class="chart">
+      <div class="errorChart"></div>
+    </div>
+  </div>
+  <div class="col-md-7">
+      <h3 class="featurette-heading">Our Origins</h3>
+  </div>
+  <p class="lead">Our heros are </p>
+</div>
+<hr class="featurette-divider">
   <div class="row featurette">
     <div class="col-md-5">
       <img class="featurette-image img-responsive" src="../../images/MLWordCluster.png" style="width: 500px; height: 500px;">
