added container for info

--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -42,7 +42,7 @@ svg {
         <!-- <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
         <div class='regression'>
         </div>
-        <button ng-click='drawLine()'>Find Linear Regression</button> <button ng-click='predictData()'>Predict New Data Output</button> <button ng-click='clearLine()'>Clear</button>
+        <a class="btn btn-lg btn-primary" role="button" ng-click='drawLine()'>Find Linear Regression</a> <<a class="btn btn-lg btn-primary" role="button" ng-click='predictData()'>Predict New Data Output</a> <a class="btn btn-lg btn-primary" role="button"  ng-click='clearLine()'>Clear</a>
       </div>
     </div>      
 
