more style changes

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -30,7 +30,9 @@
             <h2 class="text-info text-center" style="color: #FFFFFF">Algorithm Inputs</h2>
           </div>
           <img class="img-responsive img-rounded galaxy" style="width: 500px"ng-src="{{galaxyURL}}">
-          <div class="col-md-3 col-md-offset-4"> <button ng-click="nextGalaxy();" type="button" class="btn btn-primary">Next Galaxy</button> </div>
+          <div class="col-md-3 col-md-offset-4"><br> 
+            <button ng-click="nextGalaxy();" type="button" class="btn btn-primary">Next Galaxy</button> 
+          </div>
         </div>
         <div class="col-md-7">
           <div class="row tableWhole">
