--- a/public/views/partials/theguide.html
+++ b/public/views/partials/theguide.html
@@ -158,7 +158,7 @@
 <script src="../../scripts/classification.js"></script>
 <script src="../../scripts/hypothesis.js"></script>
 <script>
-  $('a').on('click', function() {
+  $('.subNav').on('click', function() {
     $('.default').empty();
   });
 </script>
