changed all pages to reflect new container width

--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container index">
   <div class="chapterTitle">
     <h2>Chapter 4: Optimizing our Machine and Travelling Into Space</h2>
   </div>
