--- a/public/views/partials/iterationAndTesting.html
+++ b/public/views/partials/iterationAndTesting.html
@@ -1,4 +1,4 @@
-<div>
+<div class = "container index">
   <div class="chapterTitle">
     <h2>Chapter 3: Building our 1st Machine and Test Flight</h2>
   </div>
@@ -7,7 +7,7 @@
   <h3>Our heroes set out taking their first pass at training a machine learning algorithm</h4><br>
       <ul>
         <li><h4 class="text-info">Iteration Based Implementation</h4>
-          <ul><li>Our heroes decided on an iterative (build and fix) model for implementing their first machine learning algorithm. With this model, our heroes hoped to take advantage of quickly gaining a high level view of our project, and gaining more insight on priorities. They were guided by a <a href="http://www.kaggle.com/c/galaxy-zoo-the-galaxy-challenge/forums/t/6803/beating-the-benchmark">forum posting</a> </ul></li></li> and set off in their journey.
+          <ul><li>Our heroes decided on an iterative (build and fix) model for implementing their first machine learning algorithm. With this model, our heroes hoped to take advantage of quickly gaining a high level view of our project, and gaining more insight on priorities. They were guided by a <a href="http://www.kaggle.com/c/galaxy-zoo-the-galaxy-challenge/forums/t/6803/beating-the-benchmark">forum posting</a> and set off in their journey.</ul></li>
         <li><h4 class="text-info">First Features</h4>
           <ul><li>Our heroes looked towards our first features to be a broad and wholistic set of data. They cropped the image, and grayscaled the image, using the final output as an initial set of features. This minimal level of complexity allowed for the fewest complications when we had to pass our data to our machine.</ul></li>
         </li></li>
