--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -1,5 +1,5 @@
 <body ng-app="galaxyApp">
-  <div>
+  <div class ="container index">
   <div class="chapterTitle">
     <h2>Chapter 2: Researching our Path</h2>
   </div>
